projects/elements/src/dialog/dialog.css
:host {
  --nve-sys-interaction-background: var(--nve-sys-interaction-background-300);
  --nve-sys-interaction-field-background: var(--nve-sys-interaction-background-300);
  --nve-sys-layer-popover-arrow-padding: 6px;
  --nve-sys-layer-popover-arrow-offset: 4px;
  --nve-sys-layer-popover-offset: var(--nve-ref-space-xxl);
  --border: var(--nve-ref-border-width-sm) solid var(--nve-ref-border-color-muted);
  --border-radius: var(--nve-ref-border-radius-lg);
  --background: var(--nve-sys-layer-overlay-background);
  --color: var(--nve-sys-layer-overlay-color);
  --padding: var(--nve-ref-size-300) var(--nve-ref-size-400);
  --box-shadow: var(--nve-ref-shadow-500);
  --gap: var(--nve-ref-space-sm);
  --max-width: 600px;
  --min-height: 250px;
  --width: 100%;
  width: 100%;
  max-width: var(--max-width);
  min-height: var(--min-height);
  height: max-content;
  min-width: max-content;
}

:host([size='sm']) {
  --max-width: 400px;
}

:host([size='lg']) {
  --max-width: 840px;
}

[internal-host] {
  padding: var(--padding);
  border-radius: var(--border-radius);
  border: var(--border);
  background: var(--background);
  color: var(--color);
  box-shadow: var(--box-shadow);
  min-height: var(--min-height);
  width: 100%;
}

:host([modal])::backdrop {
  background: rgba(0, 0, 0, 0.5);
}

.header {
  display: flex;
  gap: var(--gap);
}

.header:has(nve-icon-button) {
  min-height: var(--nve-ref-size-300);
}

.content {
  gap: var(--gap);
  display: flex;
  flex-direction: column;
}

nve-icon-button {
  position: absolute;
  top: 8px;
  right: 8px;
  z-index: 99;
}

